[package]
name = "project"
version = "0.1.0"
edition = "2021"


[dependencies]
reqwest = { version = "0.12", features = ["blocking"] }
csv = "1.1"
serde = "1.0.203"
serde_json = "1.0.118"
polars = { version = "0.41.2",features = ["csv","lazy"] }
polars-core = "0.41.2"
polars-io = "0.41.2"
tokio = "1.38.0"
postgres = "0.19.7"
sqlx = "0.7.4"
